# christianwhocodes

./: .gitignore  README.md  pyproject.toml
.github/triggers/: publish.py
.github/workflows/: publish.yaml
src/christianwhocodes/: __init__.py  cli.py
src/christianwhocodes/commands/: __init__.py  base.py  copy.py  generate.py  platform.py  random.py
src/christianwhocodes/commands/generators/: __init__.py  random.py
src/christianwhocodes/commands/io/: __init__.py  fscopy.py
src/christianwhocodes/commands/utils/: __init__.py  platform.py
src/christianwhocodes/core/: __init__.py  config.py  converters.py  enums.py  file.py  math.py  platform.py  strings.py  urls.py  version.py
src/christianwhocodes/core/commands/: __init__.py  base.py
src/christianwhocodes/core/generators/: __init__.py  file.py  random.py
src/christianwhocodes/core/io/: __init__.py  console.py  fscopy.py
src/christianwhocodes/core/utils/: __init__.py  config.py  converters.py  enums.py  math.py  platform.py  strings.py  urls.py  version.py
src/christianwhocodes/generators/: __init__.py  base.py  configs.py  file.py  random.py
src/christianwhocodes/io/: __init__.py  console.py  filesystem.py
src/christianwhocodes/utils/: __init__.py  copy.py  platform.py  version.py
tests/: __init__.py  test_config.py  test_converters.py  test_enums.py  test_math.py  test_platform.py  test_strings.py  test_urls.py  test_version.py
