[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project.urls]
homepage = "https://github.com/christianwhocodes/christianwhocodes#readme"
repository = "https://github.com/christianwhocodes/christianwhocodes"
issues = "https://github.com/christianwhocodes/christianwhocodes/issues"

[project.scripts]
christianwhocodes = "christianwhocodes.cli:main"
cwc = "christianwhocodes.cli:main"

[project]
name = "christianwhocodes"
version = "1.4.0.dev1"
description = "Utilities for developers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kevin Wasike Wakhisi", email = "kevin@christianwhocodes.space" },
]
requires-python = ">=3.12"
dependencies = ["pyperclip>=1.11.0", "rich>=14.3.3"]

[dependency-groups]
dev = ["ruff>=0.15.2", "pytest>=9.0.2"]

[tool.ruff]
line-length = 101

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"] # Resolve the conflicts

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
