[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project.urls]
homepage = "https://github.com/christianwhocodes/christianwhocodes#readme"
repository = "https://github.com/christianwhocodes/christianwhocodes"
issues = "https://github.com/christianwhocodes/christianwhocodes/issues"

[project.scripts]
christianwhocodes = "christianwhocodes.cli:main"
cwc = "christianwhocodes.cli:main"

[project]
name = "christianwhocodes"
version = "1.4.0"
description = "Utilities for developers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kevin Wasike Wakhisi", email = "kevin@christianwhocodes.space" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = ["pyperclip>=1.11.0", "rich>=14.3.3"]

[dependency-groups]
dev = ["ruff>=0.15.2"]

[tool.ruff]
line-length = 101

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"] # Resolve the conflicts

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
