[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "christianwhocodes"
version = "1.5.1.dev2"
description = "Utilities for developers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kevin Wasike Wakhisi", email = "kevin@christianwhocodes.space" },
]
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = ["pyperclip==1.11.0", "rich==14.3.3"]

[dependency-groups]
dev = ["ruff>=0.15.4", "ty>=0.0.19"]

[project.urls]
Homepage = "https://github.com/christianwhocodes/christianwhocodes"
Documentation = "https://github.com/christianwhocodes/christianwhocodes#readme"
Repository = "https://github.com/christianwhocodes/christianwhocodes"
Issues = "https://github.com/christianwhocodes/christianwhocodes/issues"
"Bug Tracker" = "https://github.com/christianwhocodes/christianwhocodes/issues"
# Changelog = "https://github.com/christianwhocodes/christianwhocodes/blob/main/CHANGELOG.md"

[project.scripts]
christianwhocodes = "christianwhocodes.cli:main"
cwc = "christianwhocodes.cli:main"

[tool.ruff]
line-length = 130

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"] # Resolve the conflicts

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
